// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compatibility routes POST /settings should update user settings 1`] = `
Settings {
  "insaneMode": false,
  "theme": "bright",
  "userId": "1",
}
`;

exports[`mutation updateUserSettings should create user settings when does not exist 1`] = `
Object {
  "updateUserSettings": Object {
    "appInsaneMode": true,
    "enableCardAnimations": true,
    "insaneMode": true,
    "openNewTab": true,
    "showOnlyUnreadPosts": false,
    "showTopSites": true,
    "spaciness": "eco",
    "theme": "bright",
    "userId": "1",
  },
}
`;

exports[`mutation updateUserSettings should update user settings 1`] = `
Object {
  "updateUserSettings": Object {
    "appInsaneMode": false,
    "enableCardAnimations": true,
    "insaneMode": true,
    "openNewTab": true,
    "showOnlyUnreadPosts": false,
    "showTopSites": true,
    "spaciness": "eco",
    "theme": "bright",
    "userId": "1",
  },
}
`;

exports[`query tagCategories should return a list of categories having key as a unique identifier and title with some cute emojis! 1`] = `
Object {
  "categories": Array [
    Object {
      "key": "Tech news",
      "title": "🦄 Tech news",
    },
    Object {
      "key": "Frontend",
      "title": "🌈 Frontend",
    },
    Object {
      "key": "Devops",
      "title": "⚙️ Devops",
    },
    Object {
      "key": "Backend",
      "title": "☁️ Backend",
    },
    Object {
      "key": "Mobile",
      "title": "📱 Mobile",
    },
  ],
}
`;

exports[`query userSettings should create default settings if not exist 1`] = `
Object {
  "appInsaneMode": true,
  "enableCardAnimations": true,
  "insaneMode": false,
  "openNewTab": true,
  "showOnlyUnreadPosts": false,
  "showTopSites": true,
  "spaciness": "eco",
  "theme": "darcula",
  "userId": "1",
}
`;
